# fing

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.jsonc  build-error.txt  bunfig.toml  details.md  index.html  indicator.html  package.json  prd.md  tasks.md  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
docs/: next.md  prd.md  tasks.md  tauri-bp.md  tests.md
scripts/: cargo-test.ts  release.ts  tauri-build.ts  tauri-dev.ts
src/: bun-test.d.ts  indicator.css  indicator.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  indicator.json  main.json
src-tauri/icons/: icon.icns
src-tauri/locales/: de.json  en.json
src-tauri/locales/macos/de.lproj/: InfoPlist.strings
src-tauri/locales/macos/en.lproj/: InfoPlist.strings
src-tauri/src/: app_info.rs  audio.rs  db.rs  dictionary.rs  engine.rs  hotkey.rs  hotkey_config.rs  hotkey_listener.rs  i18n.rs  indicator.rs  inference.rs  inference_probe.cpp  lib.rs  main.rs  model.rs  notifications.rs  paste.rs  paths.rs  settings.rs  sounds.rs  state.rs  stats.rs  transcribe.rs  update.rs  updates.rs
src-tauri/src/platform/: macos.rs  macos_permissions.m  mod.rs  windows.rs
src/components/: language-select.ts  onboarding.ts
src/lib/: hotkey-display.ts  hotkey.test.ts  hotkey.ts  i18n.test.ts  i18n.ts  icons.ts  ipc.ts  languages.test.ts  languages.ts  types.ts
src/locales/: de.json  en.json
