[package]
name = "fing"
version = "0.1.0"
edition = "2021"
description = "Fast, private, local speech-to-text"
authors = ["You"]
license = "MIT"

[lib]
name = "fing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
whisper-rs = "0.14"
cpal = "0.15"
rubato = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1"
futures-util = "0.3"
tauri-plugin-dialog = "2"
rodio = "0.20"

# macOS: Metal for Apple GPUs
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }

# Windows: Vulkan for cross-vendor GPU support
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.14", features = ["vulkan"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
