[package]
name = "fing"
version = "1.0.0"
edition = "2021"
description = "Fast, private, local speech-to-text"
authors = ["jamdaniels"]
license = "MIT"
repository = "https://github.com/jamdaniels/fing"

[lib]
name = "fing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
whisper-rs = "0.16"
cpal = "0.17"
rubato = "1.0"
audioadapter-buffers = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1"
futures-util = "0.3"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
rodio = "0.22"
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe", default-features = false }
sha2 = "0.10"

# macOS: Metal for Apple GPUs
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }
enigo = "0.6"

# Windows: Vulkan for cross-vendor GPU support
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
